Admin Table Manager Implemented + swagger updated + Models updated
